--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,37 @@
 /* All styles for your header Components live here */
+.header-container{
+   display:flex;
+    width:600px;
+    margin:auto;
+}
+
+.image-thumbnail{
+    height:3rem;
+}
+
+
+.header-header{
+    display:flex;
+}
+
+
+.header-title h1{
+    font-size:1rem;
+    padding-left:0.2rem;
+    margin-bottom:0;
+}
+
+.header-title p{
+    color: grey;
+    margin-top:0.7rem;
+    font-size:0.9rem;
+    padding-left:0.5rem;
+    margin-bottom:0;
+}
+
+
+.header-content p{
+    color: black;
+    padding-right:3rem;
+    padding-bottom:0.5rem;
+}
